src/assets/style/style.css
body {
  padding: 4%;
  display: flex;
  justify-content: center;
  margin: 0;
}
/* Dark Mode */
@media (prefers-color-scheme: dark) {
  body {
    filter: invert(1);
    background-color: black;
  }
  giscus-widget {
    filter: invert(1);
  }
}

a {
  text-decoration: none;
  color: black;
  cursor: pointer;
  user-select: none;
}

/* Fontawesome */
.fa {
  font-family: var(--fa-style-family, 'Font Awesome 6 Pro');
  font-weight: var(--fa-style, 900);
}
:root,
:host {
  --fa-style-family-classic: 'Font Awesome 6 Pro';
  --fa-font-thin: normal 100 1em/1 'Font Awesome 6 Pro';
}
@font-face {
  font-family: 'Font Awesome 6 Pro';
  font-style: normal;
  font-weight: 100;
  font-display: swap;
  src: url('../fonts/fa-thin-100_compressed.woff2') format('woff2');
}
.fa-thin {
  font-weight: 100;
}
:root,
:host {
  --fa-style-family-classic: 'Font Awesome 6 Pro';
  --fa-font-light: normal 300 1em/1 'Font Awesome 6 Pro';
}
@font-face {
  font-family: 'Font Awesome 6 Pro';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url('../fonts/fa-light-300_compressed.woff2') format('woff2');
}
.fa-light {
  font-weight: 300;
}
.fa-thin,
.fa-light {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: var(--fa-display, inline-block);
  font-style: normal;
  font-variant: normal;
  line-height: 1;
  text-rendering: auto;
}
.fa-light,
.fa-thin {
  font-family: 'Font Awesome 6 Pro';
}
.fa-arrow-left-long::before {
  content: '\f177';
}
.fa-arrow-right-long::before {
  content: '\f178';
}
.fa-arrow-rotate-right::before {
  content: '\f01e';
}
.fa-pen-nib::before {
  content: '\f5ad';
}

